--- a/lab1.html
+++ b/lab1.html
@@ -10,7 +10,7 @@
    <header>
     <nav>
       <ul>
-        <li><a href="https://github.com/hoangchristopher">GitHub</a></li>
+        <li><a href="https://github.com/hoangchristopher" target="_blank">GitHub</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -21,23 +21,47 @@
    <main>
     <section id="about">
       <h2>About Me</h2>
+      <figure>
       <img src="assets/headshot.png" alt="headshot" width="250px" height="250px">
+      <figcaption>This is a picture of me from my trip to Japan!</figcaption>
+      </figure>
+      <p>
+        I am a third year EECS major who was born in raised in San Jose, California. It's just  
+        about an hour away from Berkeley (add thirty minutes to an hour for traffic)
+      </p>
     </section>
 
     <section id="projects">
       <h2>Projects</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil laborum assumenda, perferendis ea iure quae consectetur magnam? Officiis rerum necessitatibus sint beatae incidunt exercitationem, nobis dolorum ex veniam, neque cum soluta est corrupti voluptas tenetur facilis minus. Voluptatibus, nisi sed! Temporibus adipisci quae nihil non hic deleniti quaerat aut illo ipsam rem sint eos, odit ab est eveniet amet minus harum incidunt tempore quisquam dignissimos. Voluptas aliquam placeat non fugiat provident dolorum expedita illo nobis necessitatibus tenetur harum qui debitis nam voluptatum optio laudantium numquam, dolores eaque modi obcaecati consequuntur magni ipsa aut. Dolore voluptas laborum nihil! Porro nemo fugit saepe ipsum sint est repudiandae in cum non officiis molestiae unde eveniet, ipsam, quasi sapiente cumque id quo exercitationem dolor. Culpa ullam id blanditiis reprehenderit quo dicta pariatur labore. Tempora, iure doloribus, numquam illo soluta fugiat voluptates ut odio harum dignissimos esse alias dolorum dolor ullam quisquam iusto nam eos aut dolorem itaque praesentium voluptatum, modi voluptas. Mollitia expedita ab possimus voluptates delectus excepturi quisquam pariatur neque quam quos sunt maxime, impedit totam natus voluptatem sint dignissimos iure odio dolore consectetur. Beatae, dolore atque sapiente ex, ipsum amet consectetur incidunt suscipit nulla fugit nemo tempore consequatur ullam facilis repudiandae voluptatibus hic, fuga veritatis possimus nesciunt ipsa! Nostrum officiis facere modi deserunt culpa ipsam ea alias at eaque ex omnis obcaecati vitae expedita odit voluptatum quisquam, deleniti repudiandae sed sit porro suscipit impedit, dolores doloribus fugit. Exercitationem provident, perspiciatis eligendi a ex dolorem, neque magni voluptas modi cumque consequuntur corrupti at iusto ea aliquam alias? Totam consequuntur adipisci obcaecati illo dolorem modi debitis accusantium eos fugiat quasi impedit quod, nihil fugit veniam, est aut ipsam natus sequi laudantium aliquam sapiente, maiores quidem? Neque, sapiente assumenda doloremque dolores eius ipsam rerum nesciunt nulla delectus id quis iusto ad. Expedita, ut saepe dolor nostrum velit eum nam architecto eos id voluptatibus laboriosam suscipit voluptate, quaerat necessitatibus, consequuntur eligendi assumenda recusandae temporibus sint quibusdam ea illo officiis perferendis. Provident voluptatum, numquam ab quod veritatis molestiae. Placeat exercitationem tenetur iste id optio illo sapiente? In accusamus repellat vero praesentium tempora corporis nemo sint dignissimos, doloribus nisi nulla architecto earum quibusdam qui sequi possimus id et facilis. Laudantium, sint! Ex sequi at id, reprehenderit nisi tempore dolor cupiditate placeat mollitia fugit quisquam provident beatae quibusdam quae ad nobis. Non quo temporibus porro? Dicta eius quod officiis labore architecto laboriosam, possimus temporibus odit modi sed placeat dolorem facere quisquam tenetur aperiam enim quidem, doloremque tempora cupiditate illum provident? At ratione totam distinctio, minus illum quam autem, magni, illo perferendis qui debitis odio consequuntur nisi libero voluptatibus quasi sapiente nam! Eum, repudiandae suscipit consequatur saepe in velit at aut neque, placeat, exercitationem minus sint eos ex? Aut ipsam fugiat mollitia, aperiam dignissimos, unde debitis beatae dolorem, modi maiores accusamus ullam cumque deserunt. Autem sed at voluptatem animi officia suscipit vitae quis recusandae dolorem aliquam explicabo provident, sapiente saepe aut nemo amet. Et ipsum voluptates at praesentium, fugit libero maiores, architecto mollitia repellendus fuga deleniti repellat alias molestias amet voluptas exercitationem rem animi. Exercitationem ab, reiciendis non, consectetur corrupti necessitatibus, consequuntur soluta nesciunt nostrum blanditiis eum illo aliquid earum inventore error tempore aliquam quae temporibus optio sequi ipsam ex? Laboriosam deleniti, dolore nesciunt sunt atque impedit accusamus officiis. Aperiam nisi quibusdam esse ipsam unde distinctio corporis modi, quia repellat enim harum quos veniam perferendis magni, totam, maiores dolor ad quidem earum laborum est tempora vitae. Veniam aut tenetur adipisci asperiores sint aperiam, vel, repellendus consequuntur est sapiente id officiis perspiciatis saepe dolorem nihil, voluptas quaerat sit. Soluta ex odio quis nesciunt libero fuga, labore est, iure ullam id laboriosam.
-      </p>
+      <h3>Course Projects</h3>
+      <p>Here are some of the projects I created in class: </p>
+      <ul>
+        <li><a href="https://cal-cs184-student.github.io/hw-webpages-poii/hw4/index.html" target="_blank">Cloth Simulator</a></li>
+        <li><a href="https://cal-cs184-student.github.io/hw-webpages-poii/hw3/index.html" target="_blank">Light Simulation Raytracer</a></li>
+        <li><a href="https://cal-cs184-student.github.io/hw-webpages-poii/hw2/index.html" target="_blank">Geometrical Mesh Editor</a></li>
+        <li><a href="https://cal-cs184-student.github.io/hw-webpages-poii/hw1/index.html" target="_blank">Graphics Rasterizer</a></li>
+      </ul>
+      <h3>Personal Projects</h3>
+      <p>These are a collection of projects that I've worked on during hackathons/on my own time: </p>
+      <ul>
+        <li><a href="https://devpost.com/software/honey-bay" target="_blank">BeeSure Cerebellar Examination Application</a></li>
+        <li><a href="https://drive.google.com/file/d/1bEGDioYp38nyJDRfmt0EHoL3rQ9DbtBD/view?usp=sharing" target="_blank">HoneyBrace</a></li>
+      </ul>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
+      <p>
+        Here is my <a href="https://www.linkedin.com/in/hoangchristopher/" target="_blank">Linkedin</a> page.
+      </p>
+      <p>
+        Feel free to also send me an email <a href="mailto:hoangchristopher@berkeley.edu">here</a>!
+      </p>
     </section>
    </main>
 
    <footer>
-
+      <p>You have reached the end of the webpage..............</p>
    </footer>
 </body>
 </html>
